[package]
name = "dbpipe"
version = "0.1.2"
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
log = "0.4"
once_cell = "1"
regex = "1"
stderrlog = "0.5"
structopt = "0.3"
tokio-stream = "0.1"
url = "2"

[dependencies.tokio]
version = "1"
features = ["macros", "rt"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["any", "chrono", "mysql", "runtime-tokio-native-tls"]
